# Temple-Malaria-Simulation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  RELEASES.md  owlsnest_builder.sh  vcpkg.json
src/: CMakeLists.txt  Constants.h  Model.cpp  Model.h  version.h
src/Core/: Dispatcher.cpp  Dispatcher.h  FlatArray.hxx  MultinomialDistributionGenerator.cpp  MultinomialDistributionGenerator.h  ObjectPool.h  PropertyMacro.h  Random.cpp  Random.h  Scheduler.cpp  Scheduler.h  TypeDef.h
src/Core/Config/: Config.cpp  Config.h  ConfigItem.hxx  CustomConfigItem.cpp  CustomConfigItem.h  IConfigItem.cpp  IConfigItem.h  PreconfigEvents.hxx  RaptConfig.cpp  YamlConverter.hxx  rapt_config.h
src/DxGGenerator/: DxGGenerator_main.cpp  IndividualsFileReporter.cpp  IndividualsFileReporter.h  PkPdReporter.cpp  PkPdReporter.h
src/Environment/: SeasonalEquation.cpp  SeasonalInfo.h  SeasonalRainfall.cpp
src/Events/: BirthdayEvent.cpp  BirthdayEvent.h  CirculateToTargetLocationNextDayEvent.cpp  CirculateToTargetLocationNextDayEvent.h  EndClinicalByNoTreatmentEvent.cpp  EndClinicalByNoTreatmentEvent.h  EndClinicalDueToDrugResistanceEvent.cpp  EndClinicalDueToDrugResistanceEvent.h  EndClinicalEvent.cpp  EndClinicalEvent.h  Event.cpp  Event.h  MatureGametocyteEvent.cpp  MatureGametocyteEvent.h  MoveParasiteToBloodEvent.cpp  MoveParasiteToBloodEvent.h  ProgressToClinicalEvent.cpp  ProgressToClinicalEvent.h  RaptEvent.cpp  RaptEvent.h  ReceiveMDATherapyEvent.cpp  ReceiveMDATherapyEvent.h  ReceiveTherapyEvent.cpp  ReceiveTherapyEvent.h  ReportTreatmentFailureDeathEvent.cpp  ReportTreatmentFailureDeathEvent.h  ReturnToResidenceEvent.cpp  ReturnToResidenceEvent.h  SwitchImmuneComponentEvent.cpp  SwitchImmuneComponentEvent.h  TestTreatmentFailureEvent.cpp  TestTreatmentFailureEvent.h  UpdateEveryKDaysEvent.cpp  UpdateEveryKDaysEvent.h  UpdateWhenDrugIsPresentEvent.cpp  UpdateWhenDrugIsPresentEvent.h
src/Events/Environment/: EnvironmentEventBuilder.cpp  EnvironmentEventBuilder.h  UpdateEcozoneEvent.hxx
src/Events/Population/: AnnualBetaUpdateEvent.hxx  AnnualCoverageUpdateEvent.hxx  ChangeCirculationPercentEvent.hxx  ChangeStrategyEvent.cpp  ChangeStrategyEvent.h  ChangeTreatmentCoverageEvent.cpp  ChangeTreatmentCoverageEvent.h  DistrictImportationDailyEvent.cpp  DistrictImportationDailyEvent.h  ImportationEvent.cpp  ImportationEvent.h  ImportationPeriodicallyEvent.cpp  ImportationPeriodicallyEvent.h  ImportationPeriodicallyRandomEvent.cpp  ImportationPeriodicallyRandomEvent.h  IntroduceAQMutantEvent.cpp  IntroduceAQMutantEvent.h  IntroduceLumefantrineMutantEvent.cpp  IntroduceLumefantrineMutantEvent.h  IntroduceMutantEvent.hxx  IntroduceMutantEventBase.cpp  IntroduceMutantEventBase.h  IntroduceMutantRasterEvent.hxx  IntroducePlas2CopyParasiteEvent.cpp  IntroducePlas2CopyParasiteEvent.h  ModifyNestedMFTEvent.cpp  ModifyNestedMFTEvent.h  PopulationEventBuilder.cpp  PopulationEventBuilder.h  RotateStrategyEvent.cpp  RotateStrategyEvent.h  SingleRoundMDAEvent.cpp  SingleRoundMDAEvent.h  TurnOffMutationEvent.cpp  TurnOffMutationEvent.h  TurnOnMutationEvent.cpp  TurnOnMutationEvent.h  UpdateBetaRasterEvent.hxx
src/Events/Trials/: ClinicalStudy.cpp  ClinicalStudy.h
src/GIS/: AscFile.cpp  AscFile.h  SpatialData.cpp  SpatialData.h
src/Helpers/: DbLoader.hxx  NumberHelpers.hxx  OSHelpers.cpp  OSHelpers.h  ObjectHelpers.h  RunningMedian.hxx  SQLiteDatabase.h  StringHelpers.h  TimeHelpers.h  UniqueId.hxx  cpu.hxx
src/MDC/: DataCollector.cpp  DataCollector.h  MainDataCollector.cpp  MainDataCollector.h  ModelDataCollector.cpp  ModelDataCollector.h
src/MaSim/: error_handler.hxx  main.cpp
src/Parasites/: Genotype.cpp  Genotype.h  GenotypeDatabase.cpp  GenotypeDatabase.h
src/Population/: ClonalParasitePopulation.cpp  ClonalParasitePopulation.h  DrugsInBlood.cpp  DrugsInBlood.h  ImmuneSystem.cpp  ImmuneSystem.h  Person.cpp  Person.h  Population.cpp  Population.h  SingleHostClonalParasitePopulations.cpp  SingleHostClonalParasitePopulations.h
src/Population/ImmuneComponent/: ImmuneComponent.cpp  ImmuneComponent.h  InfantImmuneComponent.cpp  InfantImmuneComponent.h  NonInfantImmuneComponent.cpp  NonInfantImmuneComponent.h
src/Population/ParasiteDensity/: ClinicalUpdateFunction.cpp  ClinicalUpdateFunction.h  ParasiteDensityUpdateFunction.h  (+2 more)
src/Reporters/: ConsoleReporter.cpp  ConsoleReporter.h  DbReporter.cpp  DbReporter.h  DbReporterDistrict.cpp  DbReporterDistrict.h  GenotypeReporter.cpp  GenotypeReporter.h  MMCReporter.cpp  MMCReporter.h  MonthlyReporter.cpp  MonthlyReporter.h  Reporter.cpp  Reporter.h  ReporterUtils.cpp  ReporterUtils.h  SQLiteDbReporter.cpp  SQLiteDbReporter.h  SQLiteDistrictReporter.cpp  SQLiteDistrictReporter.h  SQLitePixelReporter.cpp  SQLitePixelReporter.h  TravelTrackingReporter.cpp  TravelTrackingReporter.h
src/Spatial/: BarabasiSM.hxx  BurkinaFaso.hxx  Coordinate.cpp  Coordinate.h  Location.cpp  Location.h  MarshallSM.hxx  SpatialModel.hxx  SpatialModelBuilder.hxx  WesolowskiSM.hxx  WesolowskiSurfaceSM.hxx
src/Strategies/: CyclingStrategy.cpp  CyclingStrategy.h  DistrictMftStrategy.cpp  DistrictMftStrategy.h  IStrategy.h  MFTAgeBasedStrategy.cpp  MFTAgeBasedStrategy.h  MFTMultiLocationStrategy.cpp  MFTMultiLocationStrategy.h  MFTStrategy.cpp  MFTStrategy.h  NestedMFTMultiLocationStrategy.cpp  NestedMFTMultiLocationStrategy.h  NestedMFTStrategy.cpp  NestedMFTStrategy.h  SFTStrategy.cpp  SFTStrategy.h  StrategyBuilder.cpp  StrategyBuilder.h
src/Therapies/: Drug.cpp  Drug.h  DrugDatabase.cpp  DrugDatabase.h  DrugType.cpp  DrugType.h  MACTherapy.cpp  MACTherapy.h  SCTherapy.cpp  SCTherapy.h  Therapy.hxx  TherapyBuilder.cpp  TherapyBuilder.h
src/Treatment/: ITreatmentCoverageModel.cpp  ITreatmentCoverageModel.h  InflatedTCM.hxx  LinearTCM.cpp  LinearTCM.h  SteadyTCM.hxx
src/Utility/: MatrixWriter.hxx  Memory.hxx
src/Validation/: MovementValidation.cpp  MovementValidation.h
(+48 files in other folders)
